--- a/EP.EntityData/1C.EntityData.csproj
+++ b/EP.EntityData/1C.EntityData.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Context\DataContext.cs" />
+    <Compile Include="Context\TableItem.cs" />
     <Compile Include="Context\TableColumn.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
