--- a/EP/Web.config
+++ b/EP/Web.config
@@ -9,8 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=DENISBELOUS\SQLEXPRESS;Initial Catalog=EsiPirmaisLocal;User ID=sa;Password=qwerty;Integrated Security=True;Connect Timeout=300;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
-    <add name="DataContext" connectionString="data source=DENISBELOUS\SQLEXPRESS;initial catalog=EsiPirmaisLocal;integrated security=True;multipleactiveresultsets=True;connect timeout=300;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=OneConCSharp;User ID=sa;Password=qwerty;Integrated Security=True;Connect Timeout=300;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="DataContext" connectionString="data source=localhost\SQLEXPRESS;initial catalog=OneConCSharp;integrated security=True;multipleactiveresultsets=True;connect timeout=300;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
