--- a/EP.BusinessLogic/OneC.BusinessLogic.csproj
+++ b/EP.BusinessLogic/OneC.BusinessLogic.csproj
@@ -87,7 +87,8 @@
     <Compile Include="Infrastructure\DependencyResolver.cs" />
     <Compile Include="Managers\TableItemManager.cs" />
     <Compile Include="Managers\TableColumnManager.cs" />
-    <Compile Include="Model\Mappings.cs" />
+    <Compile Include="Models\TableStructureViewModel.cs" />
+    <Compile Include="Models\Mappings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\BaseService.cs" />
     <Compile Include="Services\TableItemService.cs" />
@@ -98,9 +99,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\EP.EntityData\1C.EntityData.csproj">
+    <ProjectReference Include="..\EP.EntityData\OneC.EntityData.csproj">
       <Project>{0a81e5a2-2acf-4225-8ecf-c3db8df23184}</Project>
-      <Name>1C.EntityData</Name>
+      <Name>OneC.EntityData</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
