--- a/EP/OneC.csproj
+++ b/EP/OneC.csproj
@@ -186,6 +186,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="AngularApp\AngularTemplates\AddRow.html" />
     <Content Include="AngularApp\AngularTemplates\CreateCatalog.html" />
     <Content Include="AngularApp\AngularTemplates\WaitModal.html" />
     <Content Include="AngularApp\Scripts\main\main.js" />
