1C-9: Fixed issue with row rendering

--- a/EP/OneC.csproj
+++ b/EP/OneC.csproj
@@ -187,6 +187,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="AngularApp\AngularTemplates\AddRow.html" />
+    <Content Include="AngularApp\AngularTemplates\AddColumn.html" />
     <Content Include="AngularApp\AngularTemplates\CreateCatalog.html" />
     <Content Include="AngularApp\AngularTemplates\WaitModal.html" />
     <Content Include="AngularApp\Scripts\main\main.js" />
