1C-9: Wad added the ability to add new value for row

--- a/EP/OneC.csproj
+++ b/EP/OneC.csproj
@@ -186,6 +186,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="AngularApp\AngularTemplates\AddRowValue.html" />
     <Content Include="AngularApp\AngularTemplates\AddRow.html" />
     <Content Include="AngularApp\AngularTemplates\AddColumn.html" />
     <Content Include="AngularApp\AngularTemplates\CreateCatalog.html" />
